Updated data scrapping & cliend behaviour

--- a/src/client/blocks/Movie/Movie.styl
+++ b/src/client/blocks/Movie/Movie.styl
@@ -1,3 +1,22 @@
 @import '../../consts/reset.styl';
 @import '../../consts/typography.styl';
 @import '../../consts/grid.styl';
+
+.Movie
+    padding: 0 12vw;
+    margin-bottom: 17vh;
+    margin-top: 8vh;
+
+    &__title
+        font-size: 4.2em;
+        line-height: 1.15em;
+        margin-bottom: 0.6em;
+        font-weight: 500;
+        color: #FFFFFF;
+        max-width: 10em;
+
+    &__description
+        max-width: 40em;
+        color: rgba(236, 138, 88, 0.74);
+        font-size: 1.2em;
+        line-height: 1.5em;
