--- a/src/client/blocks/MovieList/MovieList.styl
+++ b/src/client/blocks/MovieList/MovieList.styl
@@ -5,66 +5,75 @@
 body
     background: rgb(110,12,22);
 
-.Page
+.MovieList
+    padding-top: 17vh;
+
+    &__header
+        text-align: justify;
+        padding: 0 12vw;
 
     &__title
-        margin-top: 17vh;
-        max-width: 50vw;
-        padding-left: 10vw;
-        color: #FFF;
-        font-size: 7vh;
+        font-size: 4.2em;
         line-height: 1em;
+        margin-bottom: 0.6em;
+        font-weight: 500;
+        color: #FFFFFF;
+        vertical-align: baseline;
+        display: inline-block;
+        width:50%;
 
-.Loading
-    color: #FFF;
-    margin-top: 50vh;
-    margin-left: 10vw;
-    font-size: 32px;
-    line-height: 40px;
-    transform: translateY(-50%);
 
-.MovieList
-    user-select: none;
-    padding-top: 7vh;
-    padding-bottom: 10vh;
-    overflow-x: scroll;
-    white-space: nowrap;
-    padding-left: 10vw;
+    &__info
+        vertical-align: baseline;
+        color: rgba(236, 138, 88, 0.74);
+        font-weight: 500;
+        text-transform: uppercase;
+        letter-spacing: 0.168em;
+        width: 50%;
+        text-align: right;
+        display: inline-block;
 
-    &::-webkit-scrollbar {
-      display: none;
-    }
+    &__items
+        white-space: nowrap;
+        overflow-x: scroll;
+        overflow-y: visible;
+        padding: 9vh 12vw;
+        padding-top: 3vh;
 
-.Movie
-    display: inline-block;
-    width: 35vh;
-    cursor: pointer;
-    position: relative;
-    margin-right: 2vw;
-    transition: all 350ms cubic-bezier(0.23, 1, 0.32, 1);
-    box-shadow: 0 0 10px 0 rgba(0,0,0,0);
+        &::-webkit-scrollbar {
+            display: none;
+        }
 
-    &:last-child
-        margin-right: 10vw;
+    &__loading
+        color: #FFF;
+        margin-top: 50vh;
+        margin-left: 10vw;
+        font-size: 32px;
+        line-height: 40px;
+        transform: translateY(-50%);
 
-    &:before
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        z-index: 12;
-        left: 0;
-        right: 0;
-        content: '';
-        transition: box-shadow 350ms cubic-bezier(0.23, 1, 0.32, 1);
-        box-shadow: inset 0 20px 0px 0 rgba(255,255,255,0);
+    &__item
+        display: inline-block;
+        width: 35vh;
+        cursor: pointer;
+        position: relative;
+        margin-right: 2vw;
+        transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+        box-shadow: 0 0 10px 0 rgba(0,0,0,0);
 
-    &:hover&:before
-        box-shadow: inset 0 0 80px 10px rgba(255,255,255,0.05);
+        &:last-child
+            margin-right: 10vw;
 
-    &:hover
-        z-index: 9999;
-        transform: scale(1.07);
-        box-shadow: 0 20px 50px -5px rgba(0,0,0,0.6);
+        &_unselected
+            opacity: 0.4;
+            transform: scale(0.93);
+
+        &_selected
+        &:hover
+            z-index: 9999;
+            transform: scale(1.07);
+            opacity: 1;
+            box-shadow: 0 20px 50px -5px rgba(0,0,0,0.6);
 
     &__poster
         background-size: cover;
